fix(button-link): Center align the text in button link.

--- a/src/components/Button/Button.modules.scss
+++ b/src/components/Button/Button.modules.scss
@@ -18,9 +18,10 @@ $button-text-color: $color-white;
   composes: medium boldFont from '../Typography/Text/Text.modules.scss';
   composes: height font from '../FormFields.modules.scss';
 
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  width: 100%;
   padding: 0 $spacing-wide;
 
   transition: background 0.2s;
@@ -32,8 +33,8 @@ $button-text-color: $color-white;
 
 @include from-breakpoint(medium) {
   .button {
-    display: inline-block;
-    width: auto;
+    display: inline-flex;
+
     min-width: 180px;
   }
 
